--- a/blog.html
+++ b/blog.html
@@ -6,11 +6,20 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133301768-1');
+  </script>
 
     <!--- basic page needs
     ================================================== -->
      <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu - Blog</title>
+    <title>Blog | Dumebi Iwuchukwu</title>
     <meta name="description" content="This is where I share my insights, findings and experiences.">
     <meta name="theme-color" content="#449cff"/>
 
@@ -129,16 +138,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html">Sept 15, 2017</a>
+                            <a href="blog-single.html">Jan 22, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html">Photography Skills Can Improve Your Graphic Design.</a></h2>
+                        <h2 class="h01"><a href="awesome_stippling_art_sketches.html">Awesome Stippling Art Sketches.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
+                         Stippling techniques is a very contemporary style of drawing with dabbing and dots. Pen or brush of a single color is utilized and the ink’s density is depended on the style one wants to depict..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html">Photography</a>
+                            <a href="blog.html">Art</a>
                         </div>
 
                     </article>
@@ -146,31 +155,35 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html">Sept 14, 2017</a>
+                            <a href="blog-single.html">June 21, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html">Workspace Design Trends and Ideas.</a></h2>
+                        <h2 class="h01"><a href="blog-single.html">World Class Business by Design [Part 1]</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh dolore irure esse Duis nulla sint.
+                        Animals are very interesting and exhibit some behaviours that deserve our attention. They migrate, fight, swim, mate, hunt, eat and drink, driven by their instinct to avoid unfavorable stimuli, organize for shelter and reproduce young ones of the species..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html">Branding</a><a href="blog.html">Wordpress</a>
+                            <a href="blog.html">Business</a><a href="blog.html">Strategy</a>
                         </div>
                     </article>
 
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html">Sept 12, 2017</a>
+                            <a href="blog-single.html">December 4, 2016</a>
                         </div>
-                        <h2 class="h01"><a href="blog-single.html">You Can See Patterns Everywhere.</a></h2>
+                        <h2 class="h01"><a href="my_motives_stench_or_savor.html">My Motives; Stench or Savor.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
+                          You know, I’ve been thinking;
+                          Is my offering to God a sweet smelling savor or a foul smelling odor? <br>
+                          Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose? <br>
+                          Am I obedient or is it just convenient?<br>
+                          Am I truly ‘dead’ or do I just love the crowd at the funeral?
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html">Design</a><a href="blog.html">UI</a>
+                            <a href="blog.html">Spiritual</a><a href="blog.html">Personal</a>
                         </div>
                     </article>
 
@@ -302,6 +315,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    
 
 </body>
 
