--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133301768-1');
+  </script>
+
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu | Art Director, Brand Strategist and Developer - Personal website</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+    <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -23,17 +33,17 @@
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-  <meta property="og:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
-  <meta name="twitter:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
          <!-- mobile specific metas
@@ -146,7 +156,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Art Manager, Brand Strategist &amp; Developer.</p>
+                <p class="lead">Art Director, Brand Strategist &amp; Developer.</p>
             </div>
         </div>
 
@@ -157,14 +167,12 @@
 
                 <p>I believe in the Zulu philosophy of Ubuntu; I am because we are. This implies we are only truly human when we live for others in our community.</p>
 
-                 <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI to the brands involved.</p>
+                 <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI for the brands involved.</p>
 
-                <p>I am an Art Manager and Resident Instructor (Art Direction)
-                     at Oxygen Academy, Lagos Nigeria</p>
+                <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria.<br>
+                  I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University Awka, Nigeria.</p>
 
-                <p>I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
-
-                <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing .</p>
+                <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing.</p>
             </div>
 
             <div class="col-six tab-full right">
@@ -337,12 +345,12 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Jan 20, 2019</a>
+                            <a href="minimalist_design_love.html" target="_blank">Jan 20, 2019</a>
                         </div>
 
                         <h2 class="h01"><a href="minimalist_design_love.html" target="_blank">Minimalist Design Love.</a></h2>
                         <p>
-                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as...
+                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as..
                         </p>
 
                         <div class="blog-cat">
@@ -354,16 +362,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 15, 2017</a>
+                            <a href="awesome_stippling_art_sketches.html" target="_blank">Jan 22, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Photography Can Improve Your Graphic Design.</a></h2>
+                        <h2 class="h01"><a href="awesome_stippling_art_sketches.html" target="_blank">Awesome Stippling Art Sketches.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
+                         Stippling techniques is a very contemporary style of drawing with dabbing and dots. Pen or brush of a single color is utilized and the ink’s density is depended on the style one wants to depict..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Photography</a>
+                            <a href="blog.html" target="_blank">Art</a>
                         </div>
 
 
@@ -371,30 +379,34 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 14, 2017</a>
+                            <a href="world_class_business_by_design_part_1.html" target="_blank">June 21, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Workspace Design Trends and Ideas.</a></h2>
+                        <h2 class="h01"><a href="world_class_business_by_design_part_1.html" target="_blank">World Class Business by Design [Part 1]</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh dolore irure esse Duis nulla sint.
+                        Animals are very interesting and exhibit some behaviours that deserve our attention. They migrate, fight, swim, mate, hunt, eat and drink, driven by their instinct to avoid unfavorable stimuli, organize for shelter and reproduce young ones of the species..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Branding</a><a href="blog.html">Wordpress</a>
+                            <a href="blog.html" target="_blank">Business</a><a href="blog.html">Strategy</a>
                         </div>
                     </article>
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 12, 2017</a>
+                            <a href="my_motives_stench_or_savor.html" target="_blank">December 4, 2016</a>
                         </div>
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Using Patterns in your Branding.</a></h2>
+                        <h2 class="h01"><a href="my_motives_stench_or_savor.html" target="_blank">My Motives; Stench or Savor.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh.
+                          You know, I’ve been thinking;
+                          Is my offering to God a sweet smelling savor or a foul smelling odor? <br>
+                          Do I do things ‘for’ Him to please  myself or ‘with’ Him cos that’s my purpose? <br>
+                          Am I obedient or is it just convenient?<br>
+                          Am I truly ‘dead’ or do I just love the crowd at the funeral?
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Design</a><a href="blog.html" target="_blank">Branding</a>
+                            <a href="blog.html" target="_blank">Spiritual</a><a href="blog.html" target="_blank">Personal</a>
                         </div>
                     </article>
                 </div> <!-- end blog-list -->
@@ -420,7 +432,7 @@
                 <h3>Let's work together</h3>
                 <h1>Contact.</h1>
 
-                <p> The single greatest “people skill” is a highly developed & authentic interest in the *other* person. <br>Bob Burg <a href="https://twitter.com/BobBurg" target="_blank" rel="noopener">(@BobBurg)</a> October 7, 2014 </p>
+                <p>I like to listen.</p>
             </div>
         </div>
         <div class="row contact__main">
@@ -581,6 +593,7 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="lazysizes.min.js" async></script>
+  
 
 </body>
 
