--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -6,11 +6,21 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133301768-1');
+  </script>
+
 
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu - Minimalist Design Love.</title>
+    <title>Minimalist Design Love | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
     <meta name="description" content="This is where I share my insights, findings and experiences.">
@@ -142,7 +152,7 @@
                   The roots of minimalism as we know it today can be traced to a three key periods: <br>
                   <figure>
                   <img src="images\KataokaPainting_270x369.png" alt="Painting by Drue Kataoka" class="lazyload">
-                  <figcaption style="text-align:center">Painting by Japanese painter <a href="http://www.drue.net/sumie-paintings" target="_blank" rel="noopener">Drue Kataoka</a> using the traditional sumie technique</figcaption>
+                  <figcaption style="text-align:center">Painting by Japanese painter <a href="https://www.drue.net/sumie-paintings" target="_blank" rel="noopener">Drue Kataoka</a> using the traditional sumie technique</figcaption>
                   </figure>
 
 
@@ -198,9 +208,9 @@
                             </a>
                         </div>
                         <div class="blog-content__next">
-                            <a href="#0" rel="next">
+                            <a href="awesome_stippling_art_sketches.html" rel="next">
                                 <span>Next Post</span>
-                                Less Is More
+                                Awesome Stippling Art Sketches
                             </a>
                         </div>
                     </div>
