--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -6,11 +6,20 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-133301768-1');
+  </script>
+  
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu | d3ntiti brand identity and strategy case study</title>
+    <title>d3ntiti brand identity and strategy case study | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -111,7 +120,7 @@
 
                 <h2>Large Heading</h2>
 
-                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="http://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
+                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="https://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
 
                 <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
 
@@ -179,7 +188,7 @@ code {
 
                     <div class="blog-content__all">
                         <a href="blog.html" class="btn btn--primary">
-                            View All Post
+                            View All Posts
                         </a>
                     </div>
                 </div>
