--- a/thank-you.html
+++ b/thank-you.html
@@ -6,11 +6,21 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133301768-1');
+  </script>
+
 
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Thank you - Dumebi's website, portfolio and blog</title>
+    <title>Thank you | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
 
