--- a/My_YALI_Story.html
+++ b/My_YALI_Story.html
@@ -44,7 +44,7 @@
 
    <meta property="og:type" content="website">
 
-   <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+   <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal,My Yali Story, Yali, Yali Nigeria Cohort 4, Yali Rlc">
      <meta name="author" content="Dumebi Iwuchukwu">
 
 
@@ -100,7 +100,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-02.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/growth.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
@@ -110,15 +110,15 @@
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                        <a href="#0" title="My YALI Story.">
-                            My YALI Story.
+                        <a href="#0" title="My YALI Story ...Beginnings.">
+                          My YALI Story ...Beginnings.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date"> April 9, 2018</li>
+                        <li class="date">April 9, 2018</li>
                         <li class="author">
                             By
-                            <span>Jonathan Doe</span>
+                            <span>Dumebi Iwuchukwu</span>
                         </li>
                     </ul>
 
@@ -130,15 +130,28 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead">Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint.</p>
+                <p class="lead">Young African Leadership Initiative(YALI) is a Leadership training organisation initiated by the Barrack Obama Administration under the Umbrella of USAID. The goal for this is to groom young African Changemakers for Ethical and Competent leadership in the areas of Entrepreneurship, Public Service/Public Policy and Social Services.</p>
 
 
-<p>
-              My Yali Story started with my failed attempt to apply for the 2018 Mandela Washington Fellowship (MWF) because it had closed by the time. Well, I still had the YALI website to peruse and to my delight I came across the online courses. I really felt like I had been given a Vanilla/Chocolate Coldstone® Ice cream freebie when i discovered they were free. I got so addicted I did over seven courses on Design Centered Entrepreneurship [My first date with Design Thinking😉], Servant Leadership [got me feeling like Madiba] and other courses as well. I had visited the Yali Regional Learning Center websites but only saw courses which I had to go to Accra for. As it happened boredom took me there again and voila, a training I could participate in was advertised. I applied, took the administrative test and chose the welfare group [I hoped to help run things and maybe get two meal tickets🤣]. Fast forward to my first congratulatory mail, I was elated and started receiving congratulations like someone that won visa lottery. I was grateful to God though for an opportunity to learn and Network. Then my Oga Joy Charlie created our Whatsapp group, taking our contacts from google+ [double tuale from me]. Started talking with fun folks here like The Gambian Prince, The Nigerian Pilot and the Talkative Bully [you know yourself😋], made me laugh loud spontaneously, at night, on the road, even in the bank🤦🏾‍♂. Couldn’t wait for 24th February to arrive, Well I’m a Lasgidi Prince, so i trekked to the airport in a yellow cab and waited for Yali to pick me up in their Limo. …… .
-             <P>
+               <p>
+               Early on I had tried applying for The Mandela Washington Fellowship only to find out the application had closed by the time. <br>
+              Well, I still had the YALI website to peruse and to my delight I came across the online courses. I really felt like I had been given a Vanilla/Chocolate Coldstone® Ice cream freebie when I discovered they were free.</p>
+
+              <p> I got so addicted I did over seven courses on Design Centered Entrepreneurship [My first date with Design Thinking😉], Servant Leadership [got me feeling like Madiba] and other courses as well. I had visited the Yali Regional Learning Center websites but only saw courses which I had to go to Accra for.<br>
+                As it happened boredom took me there again and voila, a training I could participate in was advertised. I applied, took the administrative test and chose the welfare group [I hoped to help run things and maybe get two meal tickets🤣].
+
+              <p>
+              Fast forward to my first congratulatory mail, I was elated and started receiving congratulations like someone that won visa lottery. I was grateful to God though for an opportunity to learn and Network.<br>
+              Then my Oga Joy Charlie created our Whatsapp group, taking our contacts from google+ [double tualé from me]. <br>
+               Started talking with fun folks there like The Gambian Prince, The Nigerian Pilot and the Talkative Bully [you know yourself😋], made me laugh loud spontaneously, at night, on the road, even in the bank🤦🏾‍♂. Couldn’t wait for 24th February to arrive.
+             </p>
+             <p>
+               Well as a Lasgidi Prince I trekked to the airport in a yellow cab and waited for Yali to pick me up in their Limo. . .
+              </p>
+              <P>
             . . .to be continued</p>
             <p>
-            Taking my Lions for a hunt
+            Taking my Lions for a hunt . . .
             </p>
 
                 <div class="blog-content__pagenav">
@@ -233,7 +246,7 @@
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        
+
 </body>
 
 </html>
