--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -15,13 +15,36 @@
 
     gtag('config', 'UA-133301768-1');
   </script>
-  
+
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>d3ntiti brand identity and strategy case study | Dumebi Iwuchukwu</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
+     <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+     <meta name="theme-color" content="#449cff"/>
+
+   <link rel="canonical" href="https://www.dum3bi.com/">
+   <meta property="og:site_name" content="Dumebi Iwuchukwu">
+   <meta property="og:locale" content="en_GB">
+   <meta property="article:publisher" content="https://www.facebook.com/iwuchukwu.dumebi">
+   <meta name="twitter:site" content="@dum3bi">
+   <meta name="twitter:creator" content="@dum3bi">
+
+   <meta property="og:url" content="https://www.dum3bi.com/">
+   <meta property="og:type" content="website">
+   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
+   <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+   <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+   <meta property="og:image:alt" content="Dumebi's logo">
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Dumebi Iwuchukwu">
+   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+
+   <meta property="og:type" content="website">
+
+   <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+     <meta name="author" content="Dumebi Iwuchukwu">
 
     <!-- mobile specific metas
     ================================================== -->
