--- a/My_YALI_Story_2_enroute_to_ASCON.html
+++ b/My_YALI_Story_2_enroute_to_ASCON.html
@@ -128,7 +128,7 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead">As I alighted from my trekking device (Lag Yellow Cab) my trek coordinator (driver) looking at my boxes, asked as I paid him, “where are you flying to?”<br>
+                <p class="lead">As I alighted from my trekking device (Lag Yellow Cab) my trek coordinator (driver) looking at my boxes, asked as I paid him; “where are you flying to?”<br>
                 I don’t lie. <br>
                 I don’t like being embarrassed either.<br>
                 Guess what I replied.</p>
