--- a/index.html
+++ b/index.html
@@ -530,7 +530,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Dumebi Iwuchukwu 2019</span>
+                  <span>Copyright © 2019 Dumebi Iwuchukwu</span></br>
+                  <span>All Rights Reserved. <a  href="terms_of_use.html" target="_blank">Terms of Use</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a></span>
                 </div>
 
                 <div class="go-top">
