--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -15,6 +15,14 @@
 
   gtag('config', 'UA-84069908-2');
 </script>
+  
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-3584657889118246",
+          enable_page_level_ads: true
+     });
+</script>
 
 
     <!--- basic page needs
