--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -106,7 +106,7 @@
                     </div>
                     <h1 class="page-header__title">
                         <a href="#0" title="Privacy Policy">
-                            Privacy policy.
+                            Privacy Policy.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
