--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -180,8 +180,9 @@
 
                 <div class="col-twelve">
                     <div class="copyright">
-                        <span>© Copyright Dumebi Iwuchukwu 2019</span>
-                    </div>
+                  <span>Copyright © 2019 Dumebi Iwuchukwu</span></br>
+                  <span>All Rights Reserved. <a  href="terms_of_use.html" target="_blank">Terms of Use</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a></span>
+                </div>
 
                     <div class="go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
