--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -181,7 +181,7 @@
                 <div class="col-twelve">
                     <div class="copyright">
                   <span>Copyright © 2019 Dumebi Iwuchukwu</span></br>
-                  <span>All Rights Reserved. <a  href="terms_of_use.html" target="_blank">Terms of Use</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a></span>
+                  <span>All Rights Reserved. <a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a></span>
                 </div>
 
                     <div class="go-top">
