--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -97,7 +97,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/terms.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/terms.png)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
