Updated Terms of service, Content Policy ans Adsense tags

--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -6,6 +6,16 @@
 <!--<![endif]-->
 
 <head>
+  <!-- Google Adsense tags -->
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-3584657889118246",
+          enable_page_level_ads: true
+     });
+</script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
   <script>
@@ -267,9 +277,9 @@
             <div class="row footer-bottom">
 
                 <div class="col-twelve">
-                    <div class="copyright">
-                        <span>© Copyright Dumebi Iwuchukwu 2019</span>
-                    </div>
+                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                </div>
 
                     <div class="go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
