--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                  <span>Copyright © 2019 Dumebi Iwuchukwu</span></br>
-                  <span><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a></span>
+                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
                 <div class="go-top">
