--- a/my_motives_stench_or_savor.html
+++ b/my_motives_stench_or_savor.html
@@ -229,9 +229,9 @@
             <div class="row footer-bottom">
 
                 <div class="col-twelve">
-                    <div class="copyright">
-                        <span>© Copyright Dumebi Iwuchukwu 2019</span>
-                    </div>
+                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                </div>
 
                     <div class="go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
