--- a/world_class_business_by_design_part_1.html
+++ b/world_class_business_by_design_part_1.html
@@ -13,7 +13,7 @@
           enable_page_level_ads: true
      });
 </script>
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84069908-2"></script>
 <script>
@@ -23,7 +23,7 @@
 
   gtag('config', 'UA-84069908-2');
 </script>
-  
+
 
 
 
@@ -231,9 +231,9 @@
             <div class="row footer-bottom">
 
                 <div class="col-twelve">
-                    <div class="copyright">
-                        <span>© Copyright Dumebi Iwuchukwu 2019</span>
-                    </div>
+                  <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                </div>
 
                     <div class="go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
@@ -255,13 +255,6 @@
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-3584657889118246",
-            enable_page_level_ads: true
-          });
-        </script>
 </body>
 
 </html>
