--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="row home-content__main">
                 <h3>Hello There</h3>
                  <h1>I am Dumebi Iwuchukwu.<br>
-                   A visual storyteller, digital creative and tribal innovator.</h1>
+                   A visual storyteller, digital creative and tribal strategist.</h1>
 
 
                 <div class="home-content__buttons">
