--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="row home-content__main">
                 <h3>Hello There</h3>
                  <h1>I am Dumebi Iwuchukwu.<br>
-                   A visual storyteller, digital creative and tribal strategist.</h1>
+                   A visual storyteller, digital creative and tribal innovator.</h1>
 
 
                 <div class="home-content__buttons">
@@ -165,14 +165,10 @@
             <div class="col-six tab-full left">
                 <h3>Howdy!</h3>
 
-                <p>I believe in the Zulu philosophy of Ubuntu; I am because we are. This implies we are only truly human when we live for others in our community.</p>
-
-                 <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI for the brands involved.</p>
-
-                <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria.<br>
-                  I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University Awka, Nigeria.</p>
-
-                <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing.</p>
+                <p>I believe the essense of life is living life in a way to enable other become more responsible about themselves and others and become solutions.</p>
+                <p>I feel the best solutions are designed in collaboration with the tribes that needs it making  the solutions relevant.</p>
+                <p>I teach Art Direction at O2 Academy Lagos, The Foremost Brand Communication School in Nigeria.</p>
+                <p>I am driven to contribute through capacity building, social entreprises and impact investing.</p>
             </div>
 
             <div class="col-six tab-full right">
