--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
 
             <div class="row home-content__main">
                 <h3>Hello There</h3>
-                 <h1>I am Dumebi Iwuchukwu.<br>
-                   A visual storyteller, digital creative and tribal innovator.</h1>
+                 <h1>Imagine a world<br>
+                  where solutions are not Western or Eastern but specific to its particular locale. Where vernacular solutions are designed and implemented in solving local problems.
+                </h1>
 
 
                 <div class="home-content__buttons">
@@ -156,19 +157,22 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Art Director, Brand Strategist &amp; Developer.</p>
+                <p class="lead"> Visual Storyteller, Digital Creative &amp; Tribal Innovator.</p>
             </div>
         </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>Howdy!</h3>
-
-                <p>I believe the essense of life is living life in a way to enable other become more responsible about themselves and others and become solutions.</p>
-                <p>I feel the best solutions are designed in collaboration with the tribes that needs it making  the solutions relevant.</p>
-                <p>I teach Art Direction at O2 Academy Lagos, The Foremost Brand Communication School in Nigeria.</p>
-                <p>I am driven to contribute through capacity building, social entreprises and impact investing.</p>
+                <h4>Dumebi Iwuchukwu</h4>
+                <p>
+                  Solving problems and telling visual stories is my big passion. <br>
+                  My medical imaging background makes me think of design in an analytical and human centered way. I must first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing because the design I come up with might be solving the wrong problem or not at all.
+                <br>
+                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, O2 Academy Lagos, Breaking the Coconut  Show, McVities Biscuits Nigeria and LAIF Awards.
+                <br>
+                  My dream project is to travel the world building  vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
+                </p>
             </div>
 
             <div class="col-six tab-full right">
@@ -177,27 +181,27 @@
                 <ul class="skill-bars">
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
-                    <strong>Digital Design</strong>
+                    <strong>Brand Identity Design</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>Brand Strategy</strong>
+                    <strong>Art Direction</strong>
                     </li>
                     <li>
                     <div class="progress percent70"><span>70%</span></div>
-                    <strong>Business Strategy</strong>
+                    <strong>Product Design</strong>
                     </li>
                     <li>
                     <div class="progress percent75"><span>75%</span></div>
-                    <strong>Digital Marketing</strong>
+                    <strong>Front End Web Development</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>Design Thinking</strong>
+                    <strong>Design Sprints</strong>
                     </li>
                     <li>
                     <div class="progress percent70"><span>70%</span></div>
-                    <strong>Writing</strong>
+                    <strong>Cave Painting</strong>
                     </li>
                 </ul>
             </div>
@@ -322,7 +326,7 @@
         </div> <!-- end masonry -->
 
     </section> <!-- end works -->
-  
+
     <!-- blog
     ================================================== -->
     <section id="blog" class="s-blog target-section">
