--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                 <h4>Dumebi Iwuchukwu</h4>
                 <p>
                   Solving problems and telling visual stories is my big passion. <br>
-                  My medical imaging background makes me think of design in an analytical and human centered way. I must first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing because the design I come up with might be solving the wrong problem or not at all.
+                  My medical imaging background makes me think of design in an analytical and human centered way. I must first seek to understand the deep human needs behind the problems I'm trying to solve before generating ideas and executing them, to ensure the right problems are solved the right way, for the right people, at the right time.
                 <br>
-                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, O2 Academy Lagos, Breaking the Coconut  Show, McVities Biscuits Nigeria and LAIF Awards.
+                  Some of my favourite design projects involved my work for brands like O2 Academy Lagos, Dangote Flour Mills, Breaking the Coconut  Show, McVities Biscuits Nigeria and LAIF Awards.
                 <br>
                   My dream project is to travel the world building  vernacular solutions with local communities, fusing technology, design and culture in the areas of food, health and water supply.
                 </p>
